# wavae

./: .gitignore  README.md  debug.py  make_wrapper.py  melencode_inc.py  requirements.txt  train.py
realtime/: CMakeLists.txt  debug.pd  demo.pd  explore.pd  generate_deb.py  generate_patch.py  get_info.py  leap_to_osc.js  package.json  switch.pd
realtime/libwavae/: CMakeLists.txt
realtime/libwavae/src/: deepAudioEngine.h  extern_declaration.cpp  test.cpp  wavae.cpp  wavae.h  wavae_encoder.cpp  wavae_encoder.h
realtime/pd_patch/: CMakeLists.txt  debug.pd  debug_wavae_encoder.pd
realtime/pd_patch/src/: wavae_encoder.cpp
realtime/src/: decoder.cpp  encoder.cpp  wavae_decoder.cpp  wavae_encoder.cpp
src/: __init__.py  cached_padding.py  data.py  domain_adaptation.py  encoder.py  gan_modules.py  hparams.py  melencoder.py  model.py  pca_utils.py  train_utils.py  vanilla_vae.py  vector_quantization.py
test/vanilla/: config.py
